# GPT_Senpy

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
gptsenpy/PDFLoader/: __init__.py  pdfloader.py
gptsenpy/Prompt/: __init__.py  prompt.py
gptsenpy/Tokenizer/: tokenizer.py
gptsenpy/io/: __init__.py  read.py
gptsenpy/metrics/: __init__.py  metrics.py
gptsenpy/utils/: __init__.py  utils.py
tests/: test_io.py  test_metrics.py  test_pdf.py  test_prompt.py  test_tokenizer.py  test_utils.py
tests/data/: Attention_Augmented_Convolutional_Networks.json  DAMO-YOLO_A_Report_on_Real-Time_Object_Detection_Design.json  Single-Shot_Refinement_Neural_Network_for_Object_Detection.json  annotation_format.json  duplicate_keys.json  hand_prompt.txt  hand_replacer.json  label_category.json
