[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "pytest>=7.3.1",
    "ipdb>=0.13.13",
    "pre-commit>=3.3.1",
]
[project]
name = "gptsenpy"
version = "0.0.1"
description = ""
authors = [
    {name = "mei", email = "mingzhe-yang@g.ecc.u-tokyo.ac.jp"},
]
dependencies = [
    "tiktoken>=0.4.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.pdm.scripts]
check_type = "mypy gptsenpy tests"
check_lint = "flake8 gptsenpy tests"
check_format = "black --check gptsenpy tests"
test = "pytest tests"
